# strong

./: .gitignore  CMakeLists.txt  README.md  options.cmake
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  computer_architecture.cpp
include/: strong.hpp  strong_types.hpp
